--- a/src/options.html
+++ b/src/options.html
@@ -12,9 +12,9 @@ span {color:#f00;}
 <body>
 <div id="main">
 	<p>最小监视:
-	<input type="text" name="size" id="size" placeholder="10" size="4" />M <span></span></p>
+	<input type="text" name="size" id="size" placeholder="1" size="6" />K <span></span></p>
     <p>JSON-RPC 链接:
-    <input type="text" name="path" id="path" placeholder="http://localhost:6800/jsonrpc" size="40" /><span></span></p>
+    <input type="text" name="path" id="path" value="http://localhost:6800/jsonrpc" size="40" /><span></span></p>
 	<p>例：http://localhost:6800/jsonrpc</p>
 </div>
 
